# rs-social-simulation-tools

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.ja.md-E  README.md  README.md-E
.github/workflows/: ci.yml
crates/socsim-cli/: Cargo.toml
crates/socsim-cli/src/: datasets.rs  main.rs  opinion_world.rs  packs.rs
crates/socsim-config/: Cargo.toml
crates/socsim-config/src/: lib.rs  scenario.rs
crates/socsim-core/: Cargo.toml
crates/socsim-core/src/: lib.rs  opinion.rs
crates/socsim-datasets/: Cargo.toml
crates/socsim-datasets/src/: acquire.rs  anes.rs  ces.rs  lib.rs  registry.rs
crates/socsim-datasets/tests/: anes_recode.rs  convert.rs  registry.rs
crates/socsim-engine/: Cargo.toml
crates/socsim-engine/examples/: cellular_automata.rs  custom_mechanism.rs  engine_only.rs  opinion_dynamics.rs
crates/socsim-engine/src/: lib.rs
crates/socsim-engine/tests/: custom_mechanism.rs  snapshot.rs
crates/socsim-grid/: Cargo.toml
crates/socsim-grid/src/: lib.rs
crates/socsim-hr-lifecycle/: Cargo.toml
crates/socsim-hr-lifecycle/examples/: hr_baseline.rs  marl_turnover.rs  snapshot_resume.rs
crates/socsim-hr-lifecycle/src/: lib.rs  marl.rs  mechanisms.rs  world.rs
crates/socsim-hr-lifecycle/tests/: lifecycle.rs  marl_turnover.rs  snapshot.rs
crates/socsim-llm/: Cargo.toml  README.md
crates/socsim-llm/examples/: tutorial_llm_agent.rs
crates/socsim-llm/src/: cache.rs  client.rs  fallback.rs  harness.rs  lib.rs  live.rs  mock.rs  ollama.rs  openai.rs  parse.rs
crates/socsim-llm/tests/: caching_and_metadata.rs
crates/socsim-log/: Cargo.toml
crates/socsim-log/src/: lib.rs
crates/socsim-marl/: Cargo.toml
crates/socsim-marl/src/: buffer.rs  lib.rs  mechanism.rs  net.rs  policy.rs  trainer.rs
crates/socsim-marl/tests/: generic_learning.rs
crates/socsim-mechanisms/: Cargo.toml
crates/socsim-mechanisms/src/: contagion.rs  group.rs  lib.rs  opinion.rs  updates.rs
crates/socsim-metrics/: Cargo.toml
crates/socsim-metrics/src/: agreement.rs  distribution.rs  lib.rs  network.rs  opinion.rs  spatial.rs  stats.rs
crates/socsim-net/: Cargo.toml
crates/socsim-net/src/: lib.rs
crates/socsim-packs/: Cargo.toml
crates/socsim-packs/examples/: hr_baseline.rs  marl_turnover.rs  snapshot_resume.rs
crates/socsim-packs/src/: lib.rs  opinion.rs
crates/socsim-packs/src/hr_lifecycle/: calibration.rs  marl.rs  mechanisms.rs  mod.rs  world.rs
crates/socsim-packs/src/organizational_silence/: calibration.rs  mechanisms.rs  mechanisms_llm.rs  mod.rs  world.rs
crates/socsim-packs/tests/: lifecycle.rs  marl_turnover.rs  snapshot.rs
crates/socsim-reproduce/: Cargo.toml
crates/socsim-reproduce/src/: lib.rs
crates/socsim-reproduce/tests/: harness.rs
crates/socsim-results/: Cargo.toml
crates/socsim-results/src/: lib.rs
crates/socsim-rng/: Cargo.toml
crates/socsim-rng/src/: lib.rs
crates/socsim-runner/: Cargo.toml
crates/socsim-runner/src/: lib.rs
crates/socsim-runner/tests/: runner_integration.rs
crates/socsim-social-dynamics/: Cargo.toml
crates/socsim-social-dynamics/src/: contagion.rs  culture.rs  lib.rs  means.rs  opinion.rs
crates/socsim-survey/: Cargo.toml
crates/socsim-survey/src/: anes.rs  distribution.rs  lib.rs  schema.rs
crates/socsim-survey/tests/: anes_recode.rs
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  design.ja.md  design.md  library.ja.md  library.md  mechanisms.ja.md  mechanisms.md  packs.ja.md  packs.md  usecases.ja.md  usecases.md
docs/ai/: capability-map.md  recipes.md
docs/mechanisms/: axelrod.ja.md  axelrod.md  climate-silence.ja.md  climate-silence.md  deffuant.ja.md  deffuant.md  fear-appraisal.ja.md  fear-appraisal.md  fit.ja.md  fit.md  group-conformity.ja.md  group-conformity.md  hegselmann-krause.ja.md  hegselmann-krause.md  hiring.ja.md  hiring.md  issue-salience.ja.md  issue-salience.md  knowledge-loss.ja.md  knowledge-loss.md  learning-curve.ja.md  learning-curve.md  lorenz.ja.md  lorenz.md  ocb.ja.md  ocb.md  org-learning.ja.md  org-learning.md  org-performance.ja.md  org-performance.md  peer-effect.ja.md  peer-effect.md  policy-mechanism.ja.md  policy-mechanism.md  prefalse-cascade.ja.md  prefalse-cascade.md  psafety-update.ja.md  psafety-update.md  retaliation-event.ja.md  retaliation-event.md  (+16 more)
docs/packs/: hr-lifecycle.ja.md  hr-lifecycle.md  opinion-dynamics.ja.md  opinion-dynamics.md  organizational-silence.ja.md  organizational-silence.md
docs/tutorials/: 00-getting-started.ja.md  00-getting-started.md  01-first-model.ja.md  01-first-model.md  02-opinion-network.ja.md  02-opinion-network.md  03-spatial-grid.ja.md  03-spatial-grid.md  04-llm-agent.ja.md  04-llm-agent.md  05-scenario-pack.ja.md  05-scenario-pack.md  index.ja.md  index.md
scenarios/: hr_lifecycle_baseline.toml  opinion_dynamics_baseline.toml  org_silence_baseline.toml  org_silence_llm.toml
thoughts/ledgers/: CONTINUITY_CLAUDE-issues-11-16.md
tools/socsim_tools/: .gitignore  README.md  pyproject.toml
tools/socsim_tools/src/socsim_tools/: __init__.py  cli.py  io.py  settings.py
tools/socsim_tools/tests/: test_cli.py  test_io.py  test_settings.py
