[workspace]
resolver = "2"
members = [
    "crates/socsim-core",
    "crates/socsim-rng",
    "crates/socsim-log",
    "crates/socsim-engine",
    "crates/socsim-config",
    "crates/socsim-net",
    "crates/socsim-hr-lifecycle",
    "crates/socsim-runner",
    "crates/socsim-cli",
]

[workspace.package]
edition = "2021"
version  = "0.1.0"
authors  = ["akitenkrad"]
license  = "MIT"

[workspace.dependencies]
# Core serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Error handling
thiserror = "1"
anyhow    = "1"

# Randomness
rand        = "0.8"
rand_chacha = "0.3"
rand_distr  = "0.4"

# Graph / network
petgraph = "0.6"

# Parallelism
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }
