[workspace]
resolver = "2"
members = [
    "crates/socsim-core",
    "crates/socsim-rng",
    "crates/socsim-log",
    "crates/socsim-engine",
    "crates/socsim-config",
    "crates/socsim-net",
    "crates/socsim-grid",
    "crates/socsim-llm",
    "crates/socsim-hr-lifecycle",
    "crates/socsim-marl",
    "crates/socsim-runner",
    "crates/socsim-cli",
]

[workspace.package]
edition = "2021"
version  = "0.1.0"
authors  = ["akitenkrad"]
license  = "MIT"

[workspace.dependencies]
# Core serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Error handling
thiserror = "1"
anyhow    = "1"

# Randomness
rand        = "0.8"
rand_chacha = "0.3"
rand_distr  = "0.4"

# Graph / network
petgraph = "0.6"

# Optional LLM layer (socsim-llm): synchronous HTTP + test fixtures.
ureq     = { version = "2", features = ["json", "tls"] }
tempfile = "3"

# Parallelism
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Neural-network policies (MARL, Phase 6).
# Pure-Rust NdArray backend + autodiff; no system BLAS/CUDA dependency.
burn = { version = "0.21", default-features = false, features = ["ndarray", "autodiff", "std"] }
