[package]
name        = "socsim-cli"
description = "CLI binary `socsim` for the socsim social-simulation platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "socsim"
path = "src/main.rs"

[dependencies]
socsim-core         = { path = "../socsim-core" }
socsim-config       = { path = "../socsim-config" }
socsim-engine       = { path = "../socsim-engine" }
socsim-log          = { path = "../socsim-log" }
socsim-runner       = { path = "../socsim-runner" }
socsim-net          = { path = "../socsim-net" }
socsim-hr-lifecycle = { path = "../socsim-hr-lifecycle", optional = true }
socsim-mechanisms   = { path = "../socsim-mechanisms", optional = true }
clap.workspace      = true
serde_json.workspace = true
anyhow.workspace    = true
rand.workspace      = true
toml.workspace      = true

[features]
default = ["pack-hr-lifecycle", "pack-opinion-dynamics"]
pack-hr-lifecycle = ["dep:socsim-hr-lifecycle"]
pack-opinion-dynamics = ["dep:socsim-mechanisms"]
