[package]
name        = "socsim-cli"
description = "CLI binary `socsim` for the socsim social-simulation platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "socsim"
path = "src/main.rs"

[dependencies]
socsim-core         = { path = "../socsim-core" }
socsim-config       = { path = "../socsim-config" }
socsim-engine       = { path = "../socsim-engine" }
socsim-log          = { path = "../socsim-log" }
socsim-runner       = { path = "../socsim-runner" }
socsim-packs        = { path = "../socsim-packs", optional = true, default-features = false }
socsim-datasets     = { path = "../socsim-datasets" }
clap.workspace      = true
serde_json.workspace = true
anyhow.workspace    = true
toml.workspace      = true

[features]
default = ["pack-hr-lifecycle", "pack-opinion-dynamics", "pack-organizational-silence"]
pack-hr-lifecycle              = ["dep:socsim-packs", "socsim-packs/hr-lifecycle"]
pack-opinion-dynamics          = ["dep:socsim-packs", "socsim-packs/opinion-dynamics"]
pack-organizational-silence    = ["dep:socsim-packs", "socsim-packs/organizational-silence"]
pack-organizational-silence-llm = ["pack-organizational-silence", "socsim-packs/organizational-silence-llm"]
# Enable on-demand dataset acquisition (network download) for `socsim datasets fetch`.
datasets-acquire = ["socsim-datasets/acquire"]
