[package]
name        = "socsim-engine"
description = "Simulation engine and builder for socsim"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rand.workspace       = true
serde.workspace      = true
serde_json.workspace = true
socsim-core   = { path = "../socsim-core" }

[dev-dependencies]
socsim-config = { path = "../socsim-config" }
socsim-grid   = { path = "../socsim-grid" }
socsim-log    = { path = "../socsim-log" }
socsim-net    = { path = "../socsim-net" }
