[package]
name        = "socsim-net"
description = "Social network layer for socsim (petgraph wrapper with reproducible generators)"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
petgraph.workspace   = true
rand.workspace       = true
serde.workspace      = true
serde_json.workspace = true
socsim-core = { path = "../socsim-core" }

[dev-dependencies]
serde_json.workspace = true
