[package]
name        = "socsim-rng"
description = "Deterministic RNG with explicit seed hierarchy for socsim"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rand.workspace       = true
rand_chacha = { workspace = true, features = ["serde1"] }
serde.workspace      = true

[dev-dependencies]
serde_json.workspace = true
