[package]
name        = "socsim-survey"
description = "Config-driven survey recode for socsim (ANES/CES demographic + outcome recode, empirical category distributions); engine-free"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
csv.workspace   = true

[dev-dependencies]
serde.workspace = true
