[package]
name        = "socsim-survey"
description = "Config-driven survey recode for socsim (ANES/CES demographic + outcome recode, empirical category distributions); engine-free"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Opt-in built-in ANES 2012/2016/2020 schema builders (the `anes` module).
# Disabled by default: the crate ships as the generic, config-driven recode engine.
anes = []

[dependencies]
serde.workspace = true
csv.workspace   = true

[dev-dependencies]
serde.workspace = true
