[project]
name = "socsim-tools"
version = "0.1.0"
description = "Shared CLI dispatcher + experiment-settings renderer + results I/O helpers for socsim replication tools"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
io = ["pandas>=2.2"]
dev = ["pytest>=8", "pandas>=2.2"]

[project.scripts]
socsim-tools = "socsim_tools.cli:_demo_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/socsim_tools"]
